--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "weather_api",
   "version": "1.0.0",
   "main": "index.js",
-  "description": "Week 5 API",
+  "description": "New description for the Week 5 API",
   "engines":{
     "node": ">= 18.12 < 21"
   },
