--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "weather_api",
+  "name": "changed_name_api",
   "version": "1.0.0",
   "main": "index.js",
   "description": "New description for the Week 5 API",
